--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,6 +71,19 @@ body {
     text-transform: none;
 }
 
+.sorting-button {
+    font-family: inherit;
+    font-weight: 400;
+    font-style: normal;
+    color: #000000;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.sorting-button-active {
+    text-decoration: underline;
+}
+
 .welcome-presentation {
     background-color: #68A2CA;
     background-image: url("../images/index-background.jpg");
@@ -104,7 +117,7 @@ body {
 .advantage-item {
     text-align: center;
     width: 400px;
-    height: 384px;
+    min-height: 384px;
     background-color: rgba(131, 179, 211, 0.12);
 }
 
