--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,12 +14,43 @@
     font-display: swap;
 }
 
+.html {
+    height: 100%;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    margin: 0;
     font-family: "PT Sans", sans-serif;
     font-size: 18px;
     line-height: 21px;
     color: #000000;
     background-color: #ffffff;
+}
+
+.navigation {
+    display: flex;
+    width: 1060px;
+    margin: 0 auto;
+}
+
+.navigation-list {
+    margin: 0;
+    padding: 0;
+    width: 400px;
+}
+
+.navigation-logo {
+    display: block;
+    width: 139px;
+    margin-right: 30px;
+}
+
+.navigation-user {
+    max-width: 300px;
+    margin-left: auto;
 }
 
 .navigation-link {
@@ -31,6 +62,16 @@ body {
     color: #000000;
     text-decoration: none;
 }
+
+.main-container {
+    flex-grow: 1;
+}
+
+.page-container {
+    width: 1200px;
+    margin: 0 auto;
+}
+
 
 .button {
     font-family: inherit;
@@ -98,13 +139,12 @@ body {
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
-    width: 720px;
-    height: auto; 
+    
+     
 }
 
 .subtitle {
-    width: 720px;
-    height: auto; 
+    
     text-align: center;
     font-size: 22px;
     line-height: 26px;
@@ -112,6 +152,23 @@ body {
 
 .welcome-subtitle {
     line-height: 36px;
+}
+
+.welcome-image {
+    display: block;
+    margin: 0 auto;
+}
+
+.welcome-text {
+    width: 720px;
+    margin: 0 auto;
+}
+
+.advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
 }
 
 .advantage-item {
@@ -138,9 +195,22 @@ body {
     background-color: rgba(131, 179, 211, 0.2);
 }
 
-.search .button-brown {
+.search-container {
+    width: 720px;
+    margin: 0 auto;
+}
+
+.search-container .button-brown {
+    display: block;
     font-size: 20px;
     line-height: 36px;
+    width: 575px;
+    margin: 0 auto;
+}
+
+.result-section {
+    display: flex;
+    flex-direction: column;
 }
 
 .newsletter {
@@ -150,13 +220,23 @@ body {
     background-image: url("../images/newsletter-background.jpg");
 }
 
+.newsletter-container {
+    width: 800px;
+    margin: 0 auto;
+}
+
+.subscription {
+    display: flex;
+}
+
 .subscription-field {
     background-color: #F2F2F2;
     color: #000000;
     border: none;
-    border-radius: 10px 0px 0px 10px;
+    border-radius: 10px 0 0 10px;
     width: 600px;
-    height: 60px;
+    height: 60px;   
+    
 }
 
 .subscription-button {
@@ -168,7 +248,8 @@ body {
     color:#ffffff;
     background-color: #83B3D3;
     width: 200px;
-    height: 60px;
+    border: none;
+    border-radius: 0 10px 10px 0;
 }
 
 .footer-contacts-phone {
@@ -187,6 +268,17 @@ body {
     height: auto;
     color: #ffffff;
     background-color: #83B3D3;
+    background-image: url("../images/filter-section-background.jpg");
+}
+
+.filter-section-container {
+    width: 1060px;
+    margin: 0 auto;
+}
+
+.result-section-container {
+    width: 1060px;
+    margin: 0 auto;
 }
 
 .breadcrumbs-link {
@@ -229,6 +321,16 @@ body {
     text-align: left;
 }
 
+.load-more-section {
+    align-self: center;
+}
+
+.pagination-section {
+    display: flex;
+    width: 1060px;
+    margin: 0 auto;
+}
+
 .pagination-link {
     width: 55px;
     height: 55px;
@@ -242,6 +344,15 @@ body {
     font-style: normal;
     text-decoration: none;
 }
+.pagination {
+    margin-right: auto;
+}
+
+.cards-on-page {
+    width: 386px;
+    display: flex;
+    justify-content: space-between;
+}
 
 .pagination-current {
     background-color: #F2F2F2;
@@ -250,4 +361,22 @@ body {
 
 .no-background {
     background: none;
+}
+
+.page-footer-container {
+    display: flex;
+    width: 1060px;
+    margin: 0 auto;
+}
+
+.social-footer {
+    margin-right: auto;
+}
+
+.footer-contacts {
+    align-self: center;
+}
+
+.htmlacademy-link {
+    margin-left: auto;
 }
